--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="container">
   <h1 class="logo">Nouveau</h1>
           <div class="main-container">
-         <form action="#" method="get" onsubmit="return checkPass()" >
+         <form action="#" method="get" onsubmit="return checkPass()" role="form" >
            <div form-container>
              <div class="form-group">
                  
